--- a/test/fixtures/line_item_dates.yml
+++ b/test/fixtures/line_item_dates.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  quote: one
-  data: 2022-04-22
+today:
+  quote: first
+  date: <%= Date.current %>
 
-two:
-  quote: two
-  data: 2022-04-22
+next_week:
+  quote: first
+  date: <%= Date.current + 1.week %>
